--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -422,13 +422,13 @@ involved in the Project}
 
 \begin{enumerate}
     \item \textbf{Clear Navigation Structure}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize}
             \item \textbf{Description}: The platform will have a well-organized navigation menu, allowing users to quickly find labeling tasks, settings, help, and account details.  
             \item \textbf{Rationale}: An easy-to-navigate platform helps reduce the time taken for users to find what they need, improving the efficiency of labeling tasks and overall user satisfaction.  
             \item \textbf{Fit Criterion}: At least 90\% of users should be able to navigate to any main feature within 3 clicks, as determined by usability testing.
         \end{itemize}
     \item \textbf{Consistent User Interface Elements}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize}
             \item \textbf{Description}: The platform’s buttons, forms, and other UI elements should follow a consistent style and behavior throughout, to ensure a predictable user experience.  
             \item \textbf{Rationale}: Consistency reduces cognitive load and helps users feel comfortable and confident when interacting with the system, as they can easily recognize and understand patterns in the UI.  
             \item \textbf{Fit Criterion}: Consistency will be validated by usability tests where at least 95\% of users recognize and correctly use recurring interface elements across different pages.
@@ -439,13 +439,13 @@ involved in the Project}
 
 \begin{enumerate}
     \item \textbf{Task Prioritization Based on Preferences}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize}
             \item \textbf{Description}: Users can set preferences to prioritize specific types of labeling tasks (e.g., agricultural, urban) and receive suggestions aligned with their interests and expertise.  
             \item \textbf{Rationale}: Allowing users to work on tasks of interest or within their expertise can improve task accuracy and user satisfaction, leading to better retention and data quality.  
             \item \textbf{Fit Criterion}: Users should be able to set their task preferences in their profile, with at least 80\% of their assigned tasks matching these preferences over time.
         \end{itemize}
     \item \textbf{Localized Date, Time, and Currency Formats}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize}
             \item \textbf{Description}: The platform should display localized formats for date, time, and currency based on the user's location or preference settings.  
             \item \textbf{Rationale}: Displaying culturally familiar formats enhances user comfort and reduces errors when interpreting critical information like deadlines or earnings.  
             \item \textbf{Fit Criterion}: Date, time, and currency formats should adjust automatically based on the user’s location or manual settings, verified through localized testing.
@@ -456,13 +456,13 @@ involved in the Project}
 
 \begin{enumerate}
     \item \textbf{In-App Progress Tracking for Learning}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Users can track their progress through tutorials and training tasks within the platform, allowing them to see completed and pending learning modules.  
             \item \textbf{Rationale}: Tracking progress motivates users to complete learning tasks and helps them understand where they stand in terms of mastering platform features.  
             \item \textbf{Fit Criterion}: A progress tracker will be implemented, and at least 80\% of users should find it helpful, based on post-training feedback surveys.
         \end{itemize}
     \item \textbf{Interactive Practice Tasks}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Provide users with simulated labeling tasks to practice without affecting actual datasets, allowing them to learn through hands-on experience before starting real work.  
             \item \textbf{Rationale}: Practice tasks help users understand the labeling process without pressure, improving their confidence and accuracy before handling real data.  
             \item \textbf{Fit Criterion}: At least 85\% of users should complete at least one practice task before labeling real data, with a satisfaction rate of 90\% based on feedback.
@@ -473,13 +473,13 @@ involved in the Project}
 
 \begin{enumerate}
     \item \textbf{Contextual Help Pop-ups}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Contextual help pop-ups should be available throughout the platform, offering brief explanations for various features and guidance on how to complete tasks.  
             \item \textbf{Rationale}: Providing help exactly where users need it reduces confusion and makes it easier for users to understand how to use different parts of the platform without extensive searching.  
             \item \textbf{Fit Criterion}: At least 90\% of users should find the contextual help pop-ups clear and helpful during usability testing.
         \end{itemize}
     \item \textbf{Friendly Error Handling and Guidance}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Error messages will not only indicate what went wrong but also provide actionable steps to resolve the issue in a friendly, non-blaming tone.  
             \item \textbf{Rationale}: Friendly and constructive error handling reduces user frustration and helps users quickly resolve issues without needing support, improving overall experience.  
             \item \textbf{Fit Criterion}: At least 95\% of errors will be accompanied by actionable instructions, and users should report a low frustration rate ($<$ 10\%) when encountering errors, based on feedback.
@@ -490,13 +490,13 @@ involved in the Project}
 
 \begin{enumerate}
     \item \textbf{Adjustable Text Size and Color Themes}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: The platform will provide options for users to adjust text size and choose between different color themes (e.g., light, dark, high contrast) to improve readability based on their preferences.  
             \item \textbf{Rationale}: Allowing adjustments for visual elements helps users with low vision, color blindness, or different environmental lighting conditions to comfortably use the platform.  
             \item \textbf{Fit Criterion}: At least three different color themes will be available, and users should be able to increase text size up to 200\% without loss of content or functionality.
         \end{itemize}
     \item \textbf{Keyboard Shortcuts for Core Actions}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: The platform will support keyboard shortcuts for essential actions (e.g., navigating between tasks, submitting labels) to facilitate quick access and improve usability for users who cannot use a mouse.  
             \item \textbf{Rationale}: Keyboard shortcuts provide an alternative way to interact with the system, improving efficiency for power users and ensuring accessibility for users with limited mobility.  
             \item \textbf{Fit Criterion}: All core actions should have keyboard shortcuts available, and usability tests should confirm that at least 95\% of actions are accessible via keyboard navigation.
@@ -809,7 +809,7 @@ Addressing the initial set of problems may give rise to additional challenges th
 \section*{21 Tasks}
 
 \subsection*{21.1 Project Planning}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize} 
     \item \textbf{Define Clear Milestones}: Establish milestones based on key project phases, such as requirements gathering, hazard analysis, proof of concept, backend development, and final project demonstration.
     \item \textbf{Task Assignment and Role Allocation}: Assign tasks to team members based on their strengths and expertise, with clear ownership over specific deliverables (e.g., backend development, frontend development, documentation, testing).
     \item \textbf{Use of Project Management Tools}: Utilize tools like Kanban boards in GitHub Projects to track progress, organize tasks into 'To Do,' 'In Progress,' and 'Completed' categories, and set internal deadlines to meet project milestones effectively.
@@ -817,7 +817,7 @@ Addressing the initial set of problems may give rise to additional challenges th
 \end{itemize}
 
 \subsection*{21.2 Planning of the Development Phases}
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize} 
     \item \textbf{Requirements Gathering (24-Sep-2024 to 08-Oct-2024)}: Engage in detailed discussions with stakeholders to gather comprehensive requirements for both frontend and backend components, ensuring all technical and business needs are documented.
     \item \textbf{Hazard Analysis (10-Oct-2024 to 23-Oct-2024)}: Identify risks related to data handling, server security, and other critical project components. Develop a hazard analysis document to mitigate potential threats, especially in handling satellite imagery.
     \item \textbf{Verification \& Validation (V\&V) Planning (24-Oct-2024 to 01-Nov-2024)}: Develop a detailed V\&V plan, including test plans and quality assurance measures. This will include setting up testing environments and criteria for ensuring code correctness and reliability.
@@ -907,37 +907,37 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 
 \begin{enumerate}
     \item \textbf{Comprehensive User Manual}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: A complete user manual detailing all platform functionalities, including system access, navigation, image labeling, and account management, enhanced with visual aids like screenshots for clarity.  
             \item \textbf{Rationale}: A thorough manual helps users find information independently, reducing support queries and ensuring they can maximize the platform’s potential.  
             \item \textbf{Fit Criterion}: The manual should cover at least 95\% of the platform's features, and user feedback should reflect a 90\% satisfaction rate in terms of usefulness and comprehensiveness.
         \end{itemize}
     \item \textbf{Online Help System}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: A built-in help system with a searchable knowledge base, FAQs, and step-by-step guides to assist users with common issues or tasks directly within the platform.  
             \item \textbf{Rationale}: An online help system provides quick, on-demand support, improving user experience by minimizing interruptions when seeking assistance.  
             \item \textbf{Fit Criterion}: At least 80\% of users should be able to resolve their issues using the help system without contacting support, as validated by user surveys and support metrics.
         \end{itemize}
     \item \textbf{API Documentation for Developers}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Detailed API documentation using a standard like OpenAPI, covering all endpoints, parameters, response formats, and authentication mechanisms to facilitate integration by external developers.  
             \item \textbf{Rationale}: Well-documented APIs empower developers to integrate their applications with the platform seamlessly, fostering a wider ecosystem and usage.  
             \item \textbf{Fit Criterion}: The API documentation should be comprehensive and accurate, with at least 90\% of developer feedback confirming clarity and ease of use.
         \end{itemize}
     \item \textbf{Release Notes and Updates}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Timely release notes detailing new features, bug fixes, and system changes, ensuring users are kept informed about platform improvements and updates.  
             \item \textbf{Rationale}: Regular release notes maintain transparency, keeping users informed and reducing confusion about new functionality or changes to existing features.  
             \item \textbf{Fit Criterion}: Each major platform update should be accompanied by release notes, with at least 95\% coverage of changes, and users should report a clear understanding of new features based on feedback.
         \end{itemize}
     \item \textbf{Quick Start Guide}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: A condensed guide offering a quick overview of key platform features and essential workflows to get users started rapidly.  
             \item \textbf{Rationale}: A quick start guide enables new users to become productive immediately without needing to read extensive documentation, improving their onboarding experience.  
             \item \textbf{Fit Criterion}: At least 90\% of new users should report the quick start guide as helpful, and they should be able to complete a basic labeling task within 15 minutes of using it.
         \end{itemize}
     \item \textbf{Contextual In-App Help}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Provide contextual help directly within the platform, such as tooltips and small info pop-ups, offering real-time guidance for features or form fields as users interact with them.  
             \item \textbf{Rationale}: In-app help reduces the learning curve and provides timely support without requiring users to leave the page or workflow they are on.  
             \item \textbf{Fit Criterion}: At least 85\% of users should find in-app help intuitive and accurate in providing the necessary support as validated by user surveys.
@@ -948,37 +948,37 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 
 \begin{enumerate}
     \item \textbf{Interactive Onboarding Tutorial}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: An onboarding tutorial guiding users through key platform functions interactively, offering tooltips and prompts to familiarize them with core workflows.  
             \item \textbf{Rationale}: Interactive onboarding accelerates learning, reduces user frustration, and ensures that new users can quickly perform tasks confidently.  
             \item \textbf{Fit Criterion}: At least 85\% of users should complete the onboarding tutorial successfully within 20 minutes, with a 90\% rate of positive feedback on its effectiveness.
         \end{itemize}
     \item \textbf{Video Tutorials and Webinars}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Short, focused video tutorials covering specific platform tasks (e.g., labeling, account setup) and periodic webinars for in-depth learning and live Q\&A sessions.  
             \item \textbf{Rationale}: Video content provides a visual and engaging method for users to learn, while webinars offer opportunities for real-time interaction and deeper understanding.  
             \item \textbf{Fit Criterion}: Each key platform feature should have a corresponding video tutorial, and at least 90\% of webinar attendees should rate the sessions as helpful in post-event feedback.
         \end{itemize}
     \item \textbf{Training for Specific User Groups}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Targeted training materials and sessions tailored to different user groups, such as labelers, clients, and administrators, focusing on their unique needs and platform usage.  
             \item \textbf{Rationale}: Customized training ensures that users receive relevant guidance, making them more efficient and effective in their roles on the platform.  
             \item \textbf{Fit Criterion}: At least 90\% of users in specific groups should report that their training materials are relevant to their needs and improve their platform experience.
         \end{itemize}
     \item \textbf{Self-Assessment and Practice Environment}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: A sandbox environment allowing users to practice labeling tasks without affecting live data, including quizzes and exercises to assess understanding and improve skills.  
             \item \textbf{Rationale}: A practice environment enables users to build confidence and hone their skills in a low-pressure setting, ensuring they are prepared for real tasks.  
             \item \textbf{Fit Criterion}: At least 80\% of new users should utilize the practice environment, with self-assessment scores indicating an average improvement of 20\% in labeling accuracy over their first three attempts.
         \end{itemize}
     \item \textbf{Ongoing Support and Community Forum}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Provide ongoing support through a community forum or discussion board where users can ask questions, share experiences, and learn from one another.  
             \item \textbf{Rationale}: A support forum fosters a sense of community, provides peer-to-peer assistance, and reduces the load on formal support channels.  
             \item \textbf{Fit Criterion}: At least 75\% of user questions in the community forum should be answered by either other users or support staff within 2 days.
         \end{itemize}
     \item \textbf{Periodic User Training Assessments}  
-        \begin{itemize}[leftmargin=2cm]
+        \begin{itemize} 
             \item \textbf{Description}: Conduct periodic assessments of user knowledge through quizzes or practical tasks to identify training gaps and offer refresher sessions where needed.  
             \item \textbf{Rationale}: Regular assessments help ensure users retain knowledge and stay up-to-date with platform changes, enhancing overall productivity and satisfaction.  
             \item \textbf{Fit Criterion}: At least 70\% of users should participate in training assessments, with scores indicating a consistent understanding of platform features and workflows.
@@ -992,7 +992,7 @@ A detailed budget forecast will be developed, encompassing all the aforementione
 
 \section*{25 Ideas for Solution}
 
-\begin{itemize}[leftmargin=2cm]
+\begin{itemize} 
     \item \textbf{AI-Driven Labeling System}: Implement a machine learning model for preliminary image analysis to assist human labelers. This AI system can automatically pre-label sections of satellite images, allowing human labelers to validate or adjust these labels, significantly speeding up the process.
     
     \item \textbf{Gamification for Crowdsourced Labeling}: Introduce a gamification element to motivate and engage users who are labeling data. This can include earning points, badges, or rewards for completing labeling tasks accurately and efficiently, which can improve data quality and increase participation.
