Added reflection points

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -514,14 +514,14 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
   application, or software engineering knowledge, mechatronics knowledge or
   computer science knowledge.  Skills may be related to technology, or writing,
   or presentation, or team management, etc.  You should look to identify at
-  least one item for each team member. --> TESTING
+  least one item for each team member.
   \item For each of the knowledge areas and skills identified in the previous
   question, what are at least two approaches to acquiring the knowledge or
   mastering the skill?  Of the identified approaches, which will each team
-  member pursue, and why did they make this choice? --> TESTING
+  member pursue, and why did they make this choice?
 \end{enumerate}
 
-\section{Knowledge and Skills}
+section{Knowledge and Skills}
 
 \subsection{Knowledge}
 \begin{itemize}
@@ -559,6 +559,7 @@ graduate attribute of Lifelong Learning.  Please answer the following questions:
 
 \section{Chosen Approach}
 
-I will primarily pursue \textbf{online courses} to build a strong theoretical foundation in machine learning, supplemented by \textbf{practical projects} to reinforce his learning through application. This combination enables him to understand complex machine learning concepts and apply them effectively to the capstone project, ensuring the team leverages cutting-edge techniques for analyzing satellite imagery.
+I will primarily pursue \textbf{online courses} to build a strong theoretical foundation in machine learning, supplemented by \textbf{practical projects} to reinforce my learning through application. This combination enables me to understand complex machine learning concepts and apply them effectively to the capstone project, ensuring the team leverages cutting-edge techniques for analyzing satellite imagery.
+
 
 \end{document}
