wording and small edits

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -726,7 +726,7 @@ N/A
 The introduction of the OKKM Insights platform is expected to have several impacts on the existing technological and operational environment.
 \subsubsection{Data Privacy and Security Concerns}
 \begin{enumerate}
-    \item Impact: Handling sensitive satellite imagery and user-generated data raises significant privacy and security issues. Ensuring compliance with data protection regulations is paramount.
+    \item Impact: Handling sensitive satellite imagery and user-generated data raises significant privacy and security issues. Ensuring compliance with data protection regulations is most important.
     \item Potential Problem: Breaches or mishandling of data could lead to legal repercussions, loss of trust, and reputational damage.
 \end{enumerate}
 \subsubsection{Environmental Footprint}
@@ -797,11 +797,11 @@ Addressing the initial set of problems may give rise to additional challenges th
 \end{enumerate}
 \subsubsection{Dependency on User Participation}
 \begin{enumerate}
-    \item Follow-Up Problem: The platform's success heavily relies on active user participation for data labeling. Fluctuations in user engagement can directly impact data quality and availability, requiring strategies to stabilize user contributions.
+    \item Follow-Up Problem: The platform's success heavily relies on active user participation for data labeling. Changes in user engagement can directly impact data quality and availability, requiring strategies to stabilize user contributions.
 \end{enumerate}
 \subsubsection{Technical Debt Accumulation}
 \begin{enumerate}
-    \item Follow-Up Problem: Rapid development to address emerging problems may lead to technical debt, where short-term solutions create long-term maintenance challenges. Proper code management and refactoring practices will be essential to mitigate this issue.
+    \item Follow-Up Problem: Rapid development to address emerging problems may lead to technical debt, where short-term solutions create long-term maintenance challenges. Proper code management and refactoring practices will be needed to mitigate this issue.
 \end{enumerate}
 
 
@@ -898,8 +898,6 @@ Developing and implementing the requirements for the OKKM Insights platform invo
 A detailed budget forecast will be developed, encompassing all the aforementioned cost categories. This forecast will be periodically reviewed and adjusted based on project milestones, market conditions, and actual expenditure patterns to ensure financial sustainability and efficient resource allocation.
 
 
-
-\lips
 
 \section*{23 User Documentation and Training}
 
